--- a/main.html
+++ b/main.html
@@ -8,6 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+      <label for="input1">Input 1:</label>
+      <input type="text" id="input1" name="input1"><br><br>
+      <label for="input2">Input 2:</label>
+      <input type="text" id="input2" name="input2"><br><br>
+		  <button>Submit</button>
+    </form>
     <script type="text/javascript" src="./script.js">
 </script>
 
